--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #b49292;
+    background: #9d00ff;
     font-family: 'Arial', sans-serif;
 }
 
@@ -30,7 +30,7 @@ body {
 #data-table th {
     padding-top: 12px;
     padding-bottom: 12px;
-    background-color: #4a148c;   /* Aesthetic dark purple */
+    background-color: #000000;   
     color: white;
 }
 
@@ -39,26 +39,25 @@ body {
     position: fixed;
     top: 10px;
     right: 10px;
-    background-color: #4a148c; /* Aesthetic dark purple */
+    background-color: #131511; 
     color: white;
 }
 
-/* Additional styles for buttons */
 .btn {
     margin-right: 5px;
 }
 
 .btn-primary {
-    background-color: #0069d9; /* Blue shade for primary button */
+    background-color: #0069d9; 
     border-color: #0062cc;
 }
 
 .btn-danger {
-    background-color: #dc3545; /* Red shade for danger button */
+    background-color: #dc3545; 
     border-color: #dc3545;
 }
 
 .btn-success {
-    background-color: #28a745; /* Green shade for success button */
+    background-color: #28a745;
     border-color: #28a745;
 }
